@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                SMS-Send-IS-Vit
-version:             0.02
+version:             0.03
 abstract:            SMS::Send driver for vit.is
 license:             perl
 author:              
