@@ -1,3 +1,8 @@
+2008-02-01  Ævar Arnfjörð Bjarmason  <avar@cpan.org> (0.03)
+
+	* Vit.pm: Updated documenation to note that the vit.is gateway can
+	now send to Vodafone users as well (and vice versa)
+
 2008-01-25  Ævar Arnfjörð Bjarmason  <avar@cpan.org> (0.02)
 
 	* Makefile.PL: Drop M::I for EU::MM
